src/types/tests/snapshots/tgbot__types__tests__payment__pre_checkout_query-2.snap
---
source: src/types/tests/payment.rs
expression: expected_struct
---
{
  "currency": "GEL",
  "from": {
    "first_name": "User",
    "id": 1,
    "is_bot": false
  },
  "id": "query id",
  "invoice_payload": "invoice payload",
  "total_amount": 100
}
