src/types/tests/snapshots/tgbot__types__tests__payment__refund_star_payment.snap
---
source: src/types/tests/payment.rs
expression: actual_data
---
{
  "telegram_payment_charge_id": "test",
  "user_id": 1
}
