src/types/tests/snapshots/tgbot__types__tests__payment__refunded_payment-2.snap
---
source: src/types/tests/payment.rs
expression: "expected_struct.with_provider_payment_charge_id(\"provider-charge-id\")"
---
{
  "currency": "RUB",
  "invoice_payload": "payload",
  "telegram_payment_charge_id": "charge-id",
  "total_amount": 100,
  "provider_payment_charge_id": "provider-charge-id"
}
