src/types/tests/snapshots/tgbot__types__tests__payment__refunded_payment.snap
---
source: src/types/tests/payment.rs
expression: expected_struct.clone()
---
{
  "currency": "RUB",
  "invoice_payload": "payload",
  "telegram_payment_charge_id": "charge-id",
  "total_amount": 100
}
