src/types/tests/snapshots/tgbot__types__tests__payment__revenue_withdrawal_state-2.snap
---
source: src/types/tests/payment.rs
expression: "RevenueWithdrawalState::Pending"
---
{
  "type": "pending"
}
