src/types/tests/snapshots/tgbot__types__tests__payment__revenue_withdrawal_state-3.snap
---
source: src/types/tests/payment.rs
expression: "RevenueWithdrawalState::Succeeded\n{ date: 0, url: String::from(\"https://google.com\"), }"
---
{
  "type": "succeeded",
  "date": 0,
  "url": "https://google.com"
}
