src/types/tests/snapshots/tgbot__types__tests__payment__revenue_withdrawal_state.snap
---
source: src/types/tests/payment.rs
expression: "RevenueWithdrawalState::Failed"
---
{
  "type": "failed"
}
