src/types/tests/snapshots/tgbot__types__tests__payment__shipping_address.snap
---
source: src/types/tests/payment.rs
expression: "ShippingAddress::new(\"Gudermes\", \"RU\", \"366200\", \"Chechen Republic\",\n\"Nuradilov st., 12\", \"\")"
---
{
  "city": "Gudermes",
  "country_code": "RU",
  "post_code": "366200",
  "state": "Chechen Republic",
  "street_line1": "Nuradilov st., 12",
  "street_line2": ""
}
