src/types/tests/snapshots/tgbot__types__tests__payment__shipping_option.snap
---
source: src/types/tests/payment.rs
expression: expected_struct.clone()
---
{
  "id": "id",
  "title": "title",
  "prices": []
}
